# ai-bubble-burst-osint-tracker

./: .env.example  .gitignore  CONTRIBUTING.md  FETCHER_INTERFACE.md  IDEA.md  README.md  SCORING.md  daily_report.sh  debug_env.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.hermes/plans/: ai_bubble_burst.md
ai_analysis/: improvements.txt
logs/runs/20260706_203030/: news_broad_search_results.json
logs/runs/20260706_203030/extracted_content/: news_fallback_0.md
logs/runs/20260706_203225/: news_broad_search_results.json
logs/runs/20260706_203225/extracted_content/: news_fallback_0.md  news_fallback_1.md  news_fallback_2.md
prompts/: agent_prompt.md
scripts/: run_agent.sh
src/: main.py
src/core/: analyzer.py  engine.py  full_pipeline_live.py  logger.py  test_engine.py  test_full_pipeline.py  test_full_pipeline_live.py  test_full_pipeline_mock.py  test_integration_mock.py
src/delivery/: telegram.py
src/fetchers/: __init__.py  firecrawl_engine.py  gnews_decoder.py  googlenews.py  market.py  market_fetcher.py  mock_engine.py  news.py
src/inference/: __init__.py  bubble_risk_prompt.py  llm_engine.py
tests/: test_capex_scoring.py  test_pipeline_integration.py  test_scoring_engine.py  test_sentiment_analysis.py
